--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rfid-reader-input",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Connect your RFID reader and already have a component to capture the value.",
-  "main": "/src/index.js",
+  "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc && cp package.json README.md ./dist",
